# Arcadestr

./: .gitignore  AGENTS.MD  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  COMMANDS.md  Cargo.toml  NOSTRCONNECT_IMPLEMENTATION.md  README.md  test_nostrconnect.sh  test_social_graph_192875.db
.tmp/sessions/2025-04-01-nip46-signer/: context.md
app/: Cargo.toml
app/src/: lib.rs  models.rs  qr.rs  tauri_bridge.rs  tauri_invoke.rs  web_auth.rs  web_secure_store.rs
app/src/components/: account_selector.rs  backup_manager.rs  browse.rs  detail.rs  mod.rs  profile.rs  profile_avatar.rs  profile_display.rs  publish.rs
app/src/store/: marketplace.rs  mod.rs  profiles.rs
app/src/ui_v2/: mod.rs  shell.rs  theme.rs
app/src/ui_v2/components/: mod.rs  nav_item.rs  topbar.rs
app/src/ui_v2/views/: browse_games.rs  game_detail.rs  library.rs  login.rs  marketplace_loader.rs  mod.rs  profile.rs  publish.rs  social.rs  store_front.rs
arcadestr_test_keys/: .nostr_client_key
core/: Cargo.toml
core/migrations/: 001_initial_schema.sql
core/src/: auth.rs  extended_network.rs  lib.rs  lightning.rs  marketplace.rs  marketplace_cache.rs  nip05_validator.rs  nostr.rs  profile_fetcher.rs  relay_cache.rs  relay_events.rs  relay_hints.rs  relay_manager.rs  relay_pool.rs  saved_users.rs  signer.rs  signer_tests.rs  social_graph.rs  subscriptions.rs  user_cache.rs  version.rs  wasm_stub.rs
core/src/auth/: account.rs  account_manager.rs  auth_state.rs  mod.rs
core/src/nip46/: auth.rs  methods.rs  mod.rs  session.rs  storage.rs  types.rs
core/src/signers/: lazy_nip46.rs  local.rs  mod.rs  nip46.rs
core/src/storage/: backup.rs  db.rs  encryption.rs  marketplace_cache.rs  master_key.rs  migration.rs  mod.rs
core/tests/: nostrconnect_tests.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/src/: main.rs  nip46_commands.rs
docs/: SECURE_STORAGE_API.md
docs/superpowers/plans/: 2026-03-29-nip65-integration-plan.md  2026-03-29-nip65-relay-gossip-phase2-plan.md  2026-03-29-relay-indicator-plan.md  2026-04-01-async-nip46-authentication.md  2026-04-01-extended-network-relay-hints.md  2026-04-01-profile-system-implementation.md  2026-04-02-nostr-integration-wiring.md  2026-04-03-fix-nip46-bunker-login.md  dynamic-relay-reporting.md
docs/superpowers/specs/: 2026-03-29-nip65-relay-gossip-design.md  2026-03-29-nip65-relay-gossip-phase2-design.md
scripts/: README.md  analyze-patterns  clear_arcadestr_data.sh
v8-compile-cache-1000/11.3.244.8-node.34/: zShomezSjoelzS.npmzS_npxzS1bf7c3c15bf47d04zSnode_moduleszSts-nodezSdistzSbin.js.BLOB  zShomezSjoelzS.npmzS_npxzS1bf7c3c15bf47d04zSnode_moduleszSts-nodezSdistzSbin.js.MAP
web/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
web/snippets/: tauri-bridge.js
web/src/: lib.rs  main.rs
web/style/: tailwind.css
