[package]
name = "arcadestr-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arcadestr-app = { path = "../app" }
arcadestr-core = { path = "../core", features = ["native"] }
tauri = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nostr = { version = "0.44" }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.10.0"
urlencoding = "2.1"
url = "2"
dirs = "5"
tauri-plugin-keyring = "0.1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
