[package]
name = "arcadestr-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arcadestr-app = { path = "../app", default-features = false, features = ["wasm"] }
leptos = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[[bin]]
name = "arcadestr-web"
path = "src/main.rs"

[features]
default = []
web = ["arcadestr-app/web"]
